fix zindex problem on mobile, link to section, elements alignment

--- a/wordweb-app/src/main/resources/scss/learn.scss
+++ b/wordweb-app/src/main/resources/scss/learn.scss
@@ -63,7 +63,7 @@
   @include media-breakpoint-down(sm) {
     position: sticky;
     top: 65px;
-    z-index: $zindex-sticky;
+    z-index: 10;
     height: 56px;
     background-color: #f0f0f0;
     @include border-radius(0);
